--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "expressjs-todo-project-with-sequelize",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -13,9 +13,6 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-async-handler": "^1.2.0",
-    "pg": "^8.11.3",
-    "pg-hstore": "^2.3.4",
     "sequelize": "^6.33.0",
     "sqlite3": "^5.1.6"
   }
